# Copyright (c) 2019 The Wootz Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

import("//chrome/resources/wootz_grit.gni")
import("//build/config/locales.gni")
import("//extensions/buildflags/buildflags.gni")
import("//tools/grit/repack.gni")

wootz_grit("static_resources") {
  source = "wootz_components_resources.grd"

  output_name = "wootz_components_resources_new"

  outputs = [
    "grit/wootz_components_resources.h",
    "wootz_components_static.pak",
  ]
  deps = [
    ":strings",
  ]

  output_dir = "$root_gen_dir/components"
}

repack("resources") {
  deps = [
    ":static_resources",
  ]
  sources = [
    "$root_gen_dir/components/wootz_components_static.pak",
  ]

  deps += [ "//chrome/components/wootz_wallet/resources:ethereum_provider_generated_resources" ]
  sources += [ "$root_gen_dir/chrome/components/wootz_wallet/resources/wootz_wallet_script_generated.pak" ]

  output = "$root_gen_dir/components/wootz_components_resources.pak"
}

wootz_grit("strings") {
  source = "wootz_components_strings.grd"

  outputs = [ "grit/wootz_components_strings.h" ]

  foreach(locale, all_chrome_locales) {
    outputs += [ "wootz_components_strings_$locale.pak" ]
  }

  output_dir = "$root_gen_dir/components"
}

action("about_credits") {
  script = "//chrome/script/check_npm_licenses.py"

  inputs = [ "//chrome/package.json" ]

  outputs = [ "$root_gen_dir/npm_licenses.checked" ]

  args = [ rebase_path("$root_gen_dir/npm_licenses.checked") ]
}
