# Copyright (c) 2023 The Wootz Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

wootz_net_dns_sources = [
  "//chrome/net/dns/secure_dns_counter.cc",
  "//chrome/net/dns/secure_dns_counter.h",
  "//chrome/net/dns/secure_dns_endpoints.h",
]
