[package]
name = "rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx={ version = "1.0", features = [ "alloc", "std" ] }
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}
libc = "0.2.58"

[lib]
name="json_cxx"
crate-type=["rlib"]