# Copyright (c) 2024 The Wootz Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

source_set("lib") {
  visibility = [
    "//components/services/wootz_wallet/public/cpp",
    "//chrome/utility:*",
  ]

  sources = [
    "wootz_wallet_utils_service_impl.cc",
    "wootz_wallet_utils_service_impl.h",
  ]

  deps = [
    "//components/services/wootz_wallet/public/mojom",
    "//components/services/wootz_wallet/zcash:zcash_decoder",
    "//mojo/public/cpp/system",
  ]
}
