import("//build/buildflag_header.gni")

declare_args() {
  wootz_stats_api_key = ""
}

buildflag_header("buildflags") {
  header = "buildflags.h"
  flags = [ "WOOTZ_STATS_API_KEY=\"$wootz_stats_api_key\"" ]
}

static_library("browser") {
  sources = [
    "wootz_stats_updater_util.cc",
    "wootz_stats_updater_util.h",
  ]

  deps = [
    ":buildflags",
    "//base",
    "//components/prefs",
  ]
}
