source_set("renderer") {
  sources = [
    "js_ethereum_provider.cc",
    "js_ethereum_provider.h",
    "js_solana_provider.cc",
    "js_solana_provider.h",
    "resource_helper.cc",
    "resource_helper.h",
    "v8_helper.cc",
    "v8_helper.h",
  ]

  deps = [
    "//base",
    "//components/wootz_wallet/common",
    "//components/wootz_wallet/common:common_constants",
    "//components/wootz_wallet/common:mojom",
    "//components/wootz_wallet/resources:ethereum_provider_generated_resources",
    "//components/resources:static_resources_grit",
    "//components/resources:strings_grit",
    "//components/safe_builtins/renderer",
    "//content/public/common",
    "//content/public/renderer",
    "//gin",
    "//mojo/public/cpp/bindings",
    "//third_party/blink/public:blink",
    "//third_party/blink/public/common",
    "//v8",
  ]
}
